# project_ars_humanoid_robots

./: CMakeLists.txt  model.config  package.xml
launch/: display.launch.py  gazebo.launch.py  gazebo2.launch.py
meshes/: BodyCat.dae  BodySae1.dae  BodySat.dae  Hand.dae  HandSat.dae  Head.dae  HeadCat.dae  HeadSat.dae  Leg2.dae  Leg3.dae  LegSat.dae  PelvisSet.dae  body.dae  leg1.dae  pelvis.dae
urdf/: 01-myfirst.urdf  03-origins.urdf  04-materials.urdf  05-visual.urdf  07-physics.urdf  my_robot.urdf  my_robot.urdf.xacro  project_ars.urdf  wani_test.urdf
