<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>project_ars</name>
	<version>0.0.0</version>
	<description>TODO: Package description</description>
	<maintainer email="syazwaninurul02@gmail.com">wanikimizuhair</maintainer>
	<license>TODO: License declaration</license>
	
	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>
	
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
		<depend>rclcpp</depend>
	<depend>rclpy</depend>
	<build_depend>gazebo_dev</build_depend>
	<build_depend>gazebo_msgs</build_depend>
	<build_depend>gazebo_ros</build_depend>
	
	<exec_depend>gazebo_dev</exec_depend>
	<exec_depend>gazebo_msgs</exec_depend>
	<exec_depend>gazebo_ros</exec_depend>
	<exec_depend>joint_state_publisher</exec_depend>
	<exec_depend>urdf_launch</exec_depend>
	
	<!-- <exec_depend>fake_localization</exec_depend> -->
	<!-- <exec_depend>joy</exec_depend> -->
	<!-- <exec_depend>prius_description</exec_depend> -->
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>rviz2</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>tf2_ros</exec_depend>
	<exec_depend>xacro</exec_depend>
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
